--- a/src/scss/themes/fylr/components/_date-time.scss
+++ b/src/scss/themes/fylr/components/_date-time.scss
@@ -83,6 +83,7 @@
 
 			.cui-button-center {
 				padding-left: $btn-padding-x/2;
+				padding-right: $btn-padding-x/2;
 			}
 
 			.cui-button-right {
